--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -12,7 +12,7 @@
         android:paddingBottom="@dimen/activity_vertical_margin"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         tools:showIn="@layout/activity_main"
-        tools:context="baishuai.github.io.keddit.ui.main.MainActivity">
+        tools:context="baishuai.github.io.keddit.feture.main.MainActivity">
 
     <TextView
             android:layout_width="wrap_content"
