--- a/app/src/main/res/layout/news_fragment.xml
+++ b/app/src/main/res/layout/news_fragment.xml
@@ -6,7 +6,7 @@
 
 
     <android.support.v7.widget.RecyclerView
-            android:id="@+id/news_list"
+            android:id="@+id/newsList"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
 </LinearLayout>
